--- a/CompHist.ipynb
+++ b/CompHist.ipynb
@@ -2100,33 +2100,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "def draw_heatmap(data, row_labels, column_labels):\n",
-    "    # 描画する\n",
-    "    fig, ax = plt.subplots()\n",
-    "    heatmap = ax.pcolor(data, cmap=plt.cm.Blues)\n",
-    "\n",
-    "    ax.set_xticks(np.arange(data.shape[0]) + 0.5, minor=False)\n",
-    "    ax.set_yticks(np.arange(data.shape[1]) + 0.5, minor=False)\n",
-    "\n",
-    "    ax.invert_yaxis()\n",
-    "    ax.xaxis.tick_top()\n",
-    "\n",
-    "    ax.set_xticklabels(row_labels, minor=False, rotation=45)\n",
-    "    ax.set_yticklabels(column_labels, minor=False)\n",
-    "    plt.show()\n",
-    "    #plt.savefig('image.png')\n",
-    "\n",
-    "    return heatmap"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
@@ -2138,18 +2111,18 @@
     "    # Create a mask\n",
     "    mask = None\n",
     "\n",
-    "    # Create a custom divergin palette    \n",
-    "    color_code = \"ch:start=.2,rot=-.3,reverse=\"\n",
-    "    if cmap_rev:\n",
-    "        color_code += '1'\n",
-    "    else:\n",
-    "        color_code += '0'\n",
+    "    #Create a matplotlib colormap from the sns seagreen color palette\n",
+    "    cmap = sns.light_palette(\"blue\", reverse=cmap_rev, as_cmap=True )\n",
+    "    # Normalize to the range of possible values from df[\"c\"]\n",
+    "    norm = matplotlib.colors.Normalize(vmin=df.min().min(), vmax=df.max().max())\n",
+    "    # create a color dictionary (value in c : color from colormap) \n",
+    "    colors = {}\n",
+    "    for cval in df.values.reshape(-1):\n",
+    "        colors.update({cval : cmap(norm(cval))})\n",
     "        \n",
-    "    cmap = sns.color_palette(color_code, 2500, as_cmap=True)\n",
-    "\n",
     "    fig, ax = plt.subplots(figsize=(15,15))\n",
     "    sns.heatmap(df, mask=mask, center=0, annot=True,\n",
-    "                fmt='.2f', square=True, cmap=cmap, vmax=df.max().max(), vmin=0)\n",
+    "                fmt='.2f', square=True, cmap=cmap)\n",
     "\n",
     "    if outpath==None:\n",
     "        plt.show()\n",
