--- a/MakePlots.ipynb
+++ b/MakePlots.ipynb
@@ -8848,6 +8848,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['204',\n",
+       " '3018',\n",
+       " '5407',\n",
+       " '1741186',\n",
+       " '3991',\n",
+       " '333',\n",
+       " '2954',\n",
+       " '1800',\n",
+       " '1926488',\n",
+       " '4523',\n",
+       " '4072',\n",
+       " '2820',\n",
+       " '238',\n",
+       " '244',\n",
+       " '335',\n",
+       " '214',\n",
+       " '253',\n",
+       " '3729',\n",
+       " '237',\n",
+       " '3759',\n",
+       " '5023',\n",
+       " '2147']"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i.split('CHEMBL')[1] for i in stats.index]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
