--- a/GetStats.ipynb
+++ b/GetStats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,18 +932,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = []\n",
+    "\n",
+    "for i, split in enumerate(['wodirection_trtssplit', 'axv']):\n",
+    "    for ml in ['SVM', 'Random_Forest', 'XGBoost', 'FCNN', 'FCNN_separated', 'MPNN', 'MPNN_separated', '1NN', '5NN']:\n",
+    "        \n",
+    "        if i==0:\n",
+    "            df = pd.read_csv('./Score_%s/%s/mean.tsv'%(split, ml), sep='\\t', index_col=0)\n",
+    "        if i==1:\n",
+    "            df = pd.read_csv('./Score_%s/%s/mean_bothout.tsv'%(split, ml), sep='\\t', index_col=0)\n",
+    "            \n",
+    "        df = assign_vals(df, cols=['thres', 'core_id'], new_col=['thres', '#MMS'])\n",
+    "        df['model'] = ml\n",
+    "        df['split'] = split\n",
+    "        \n",
+    "        scores += [df]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_scores = pd.concat(scores, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "from figure import plots\n",
+    "\n",
+    "for metric in ['matthews_coeff', 'auc_roc', 'recall', 'precision']:\n",
+    "    plots.MakeBoxPlotsSeaborn(table     = all_scores,\n",
+    "                            xname     = 'model',\n",
+    "                            yname     = metric,\n",
+    "                            hue       = 'split',\n",
+    "                            use_swarm = False,\n",
+    "                            )"
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "fb5768cf1fa8b6342377f1e0a16a7f0a51a333915102063af4fd5352b3f8a878"
-  },
   "kernelspec": {
-   "display_name": "Python 3.6.13 64-bit (conda)",
+   "display_name": "Python 3.6.13 64-bit ('rdkit_torch')",
    "language": "python",
    "name": "python3"
   },
@@ -957,9 +999,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "886c8a4390b0e50503702387980534faa02b9f38efd219b9be5582ea343f0181"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
