mod order of xticks

--- a/GetStats.ipynb
+++ b/GetStats.ipynb
@@ -937,8 +937,8 @@
    "outputs": [],
    "source": [
     "scores = []\n",
-    "mls  = ['SVM', 'Random_Forest', 'XGBoost', 'FCNN', 'FCNN_separated', 'MPNN', 'MPNN_separated', '1NN', '5NN']\n",
-    "abbs = ['svm', 'rf', 'xgb', 'fcnn', 'fcnn_sep', 'mpnn', 'mpnn_sep', '1NN', '5NN']\n",
+    "mls  = ['SVM', 'XGBoost', 'Random_Forest', 'FCNN', 'FCNN_separated', 'MPNN', 'MPNN_separated', '1NN', '5NN']\n",
+    "abbs = ['svm', 'xgb', 'rf', 'fcnn', 'fcnn_sep', 'mpnn', 'mpnn_sep', '1NN', '5NN']\n",
     "\n",
     "for i, split in enumerate(['wodirection_trtssplit', 'axv']):\n",
     "    for ml, abb in zip(mls, abbs):\n",
@@ -1077,7 +1077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.13"
   },
   "orig_nbformat": 4,
   "vscode": {
