--- a/GetRepresentativeMols.ipynb
+++ b/GetRepresentativeMols.ipynb
@@ -118,11 +118,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "fb5768cf1fa8b6342377f1e0a16a7f0a51a333915102063af4fd5352b3f8a878"
-  },
   "kernelspec": {
-   "display_name": "Python 3.6.13 64-bit (conda)",
+   "display_name": "Python 3.6.13 64-bit ('rdkit_torch')",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +135,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.6.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "886c8a4390b0e50503702387980534faa02b9f38efd219b9be5582ea343f0181"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
