--- a/Plots_BiasedVSBalanced.ipynb
+++ b/Plots_BiasedVSBalanced.ipynb
@@ -11,7 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import os\n",
-    "from Images import plots"
+    "from BaseFunctions import MakeBoxPlotsSeaborn"
    ]
   },
   {
@@ -128,7 +128,7 @@
    ],
    "source": [
     "for metric, ylabel in zip(['balanced_accuracy', 'matthews_coeff', 'recall', 'precision'], ['BA', 'MCC', 'Recall', 'Precision']):\n",
-    "    ax=plots.MakeBoxPlotsSeaborn(table     = all_score,\n",
+    "    ax=MakeBoxPlotsSeaborn(table     = all_score,\n",
     "                            xname     = 'model',\n",
     "                            yname     = metric,\n",
     "                            hue       = 'balance',\n",
@@ -234,7 +234,7 @@
    ],
    "source": [
     "for metric, ylabel in zip(['balanced_accuracy', 'matthews_coeff', 'recall', 'precision'], ['BA', 'MCC', 'Recall', 'Precision']):\n",
-    "    ax=plots.MakeBoxPlotsSeaborn(table     = all_score,\n",
+    "    ax=MakeBoxPlotsSeaborn(table     = all_score,\n",
     "                            xname     = 'model',\n",
     "                            yname     = metric,\n",
     "                            hue       = 'balance',\n",
