--- a/Plots_NonDataLeakage.ipynb
+++ b/Plots_NonDataLeakage.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "from figure import plots"
+    "from BaseFunctions import MakeBoxPlotsSeaborn, makeHistogramSeaborn"
    ]
   },
   {
@@ -301,7 +301,7 @@
     }
    ],
    "source": [
-    "plots.makeHistogramSeaborn(pd_table  = tlist,\n",
+    "makeHistogramSeaborn(pd_table  = tlist,\n",
     "                           xname     = 'thres',\n",
     "                           hue_col   = None,\n",
     "                           normalize = False,\n",
@@ -334,7 +334,7 @@
     }
    ],
    "source": [
-    "plots.makeHistogramSeaborn(pd_table  = tlist,\n",
+    "makeHistogramSeaborn(pd_table  = tlist,\n",
     "                           xname     = '#mmp',\n",
     "                           hue_col   = None,\n",
     "                           normalize = False,\n",
@@ -366,7 +366,7 @@
     }
    ],
    "source": [
-    "plots.makeHistogramSeaborn(pd_table  = tlist,\n",
+    "makeHistogramSeaborn(pd_table  = tlist,\n",
     "                           xname     = '#mms',\n",
     "                           hue_col   = None,\n",
     "                           normalize = False,\n",
@@ -722,7 +722,7 @@
     "os.makedirs('./Score_axv/swarm_performance_%s/' %(type), exist_ok=True)\n",
     "\n",
     "for metric in ['matthews_coeff', 'auc_roc', 'recall', 'precision']:\n",
-    "    plots.MakeBoxPlotsSeaborn(table     = all_score,\n",
+    "    MakeBoxPlotsSeaborn(table     = all_score,\n",
     "                            xname     = 'model',\n",
     "                            yname     = metric,\n",
     "                            use_swarm = True,\n",
@@ -798,7 +798,7 @@
     "os.makedirs('./Score_axv/swarm_performance_%s/' %(type), exist_ok=True)\n",
     "\n",
     "for metric in ['matthews_coeff', 'auc_roc', 'recall', 'precision']:\n",
-    "    plots.MakeBoxPlotsSeaborn(table     = all_score,\n",
+    "    MakeBoxPlotsSeaborn(table     = all_score,\n",
     "                            xname     = 'model',\n",
     "                            yname     = metric,\n",
     "                            use_swarm = False,\n",
@@ -1903,170 +1903,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def makeHistogramOne(y1, xlab_name='Value', legend1='Data 1', y_title='', is_scale=False, save_fig_name=None, show_legend=True, rotate_x=0, logscale=False, include_zero=True):\n",
-    "    \"\"\"\n",
-    "    Make one histograms and then save it on the file if specified\n",
-    "    \"\"\"\n",
-    "    plt.figure()\n",
-    "\n",
-    "    if logscale:\n",
-    "        y1 = np.log10(y1)\n",
-    "        xlab_name += '(log10)' \n",
-    "        \n",
-    "    if include_zero:\n",
-    "        bins = [0.1*i for i in range(0, 11)]\n",
-    "        plt.xlim([0, 1.0])\n",
-    "    else:\n",
-    "        bins = [0.1*i for i in range(1, 11)]\n",
-    "        plt.xlim([0.1, 1.0])\n",
-    "        \n",
-    "    h1 = plt.hist(y1, bins=bins, color='b', label=legend1, density=is_scale)\n",
-    "\n",
-    "    plt.xlabel(xlab_name, fontsize=18)\n",
-    "    plt.ylabel('Frequency', fontsize=18)\n",
-    "    plt.title(y_title)\n",
-    "    plt.xticks(fontsize=18, rotation=rotate_x)\n",
-    "    plt.yticks(fontsize=18)\n",
-    "    \n",
-    "    \n",
-    "    if show_legend:\n",
-    "        plt.legend(loc='upper right', fontsize=18)\n",
-    "    if save_fig_name is not None:\n",
-    "        plt.savefig(save_fig_name, bbox_inches='tight')\n",
-    "        plt.close()\n",
-    "    else:\n",
-    "        plt.show()\n",
-    "    return h1\n",
-    "\n",
-    "\n",
-    "from Fingerprint.Hash2BitManager       import Hash2Bits, FindBitLength, GenerateFpsArray\n",
-    "from Kernels.Kernel          import funcTanimotoKernel_MMPKernel, funcTanimotoSklearn\n",
-    "from functools import partial\n",
-    "from Similarity.SimilarityHist import flattenTC\n",
-    "import seaborn as sns\n",
-    "import os\n",
-    "\n",
-    "def MakeSimilarityHistogram(target, folder, use_zero=True):\n",
-    "    df_tlist = pd.read_csv('./Dataset/target_list.tsv', sep='\\t', index_col='chembl_tid') \n",
-    "    df_main = pd.read_csv('./Dataset/Data/%s.tsv'%target, sep='\\t', index_col=0)\n",
-    "    df_ecfp = pd.read_csv('./Dataset/ECFP/%s.tsv'%target, sep='\\t', index_col=0)\n",
-    "\n",
-    "    len_c = FindBitLength(df_ecfp, ['core'])\n",
-    "    len_s = FindBitLength(df_ecfp, ['sub1', 'sub2', 'overlap'])\n",
-    "\n",
-    "    mms = df_ecfp.loc[df_main.drop_duplicates(['core_id']).index,:]\n",
-    "\n",
-    "    fpgen = Hash2Bits()\n",
-    "    fpc = GenerateFpsArray(mms['core'], nbits=len_c) \n",
-    "    fp = fpgen.GetMMPfingerprints_DF_unfold(df_ecfp, ['core', 'sub1', 'sub2', 'overlap'], nbits=[len_c, len_s], overlap='concat')\n",
-    "\n",
-    "    matc = funcTanimotoSklearn(fpc,fpc)\n",
-    "    simc = flattenTC(matc)\n",
-    "\n",
-    "    simfunc = partial(funcTanimotoKernel_MMPKernel, len_c=len_c)\n",
-    "    mat = simfunc(fp,fp)\n",
-    "    sim = flattenTC(mat)\n",
-    "\n",
-    "    tname = df_tlist.loc[target, 'primary_name']\n",
-    "    \n",
-    "    if use_zero:\n",
-    "        outdir = './Score_wodirection_trtssplit/similarity_hist/%s-with_zero' %(folder)\n",
-    "    else:\n",
-    "        outdir = './Score_wodirection_trtssplit/similarity_hist/%s-without_zero' %(folder)\n",
-    "        \n",
-    "    os.makedirs(outdir, exist_ok=True)\n",
-    "    \n",
-    "    makeHistogramOne(simc,\n",
-    "                     xlab_name     = 'core_wise_similarity',\n",
-    "                     y_title       = tname,\n",
-    "                     show_legend   = False,\n",
-    "                     save_fig_name = '%s/core_wise_%s.png'%(outdir, target),\n",
-    "                     include_zero  = use_zero,)\n",
-    "    \n",
-    "    makeHistogramOne(sim,\n",
-    "                     xlab_name     = 'mmp_wise_similarity',\n",
-    "                     y_title       = tname,\n",
-    "                     show_legend   = False,\n",
-    "                     save_fig_name = '%s/mmp_wise_%s.png'%(outdir, target),\n",
-    "                     include_zero  = use_zero,)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fcntargets = diff_fcnn_svm.sort_values('d_mcc', ascending=False).index[:10]\n",
-    "# svmtargets = diff_fcnn_svm.sort_values('d_mcc', ascending=True).index[:10]\n",
-    "\n",
-    "# for use_zero in [True, False]:\n",
-    "#     for target in fcntargets:   \n",
-    "#         MakeSimilarityHistogram(target, 'fcnn-svm/fcnn_better', use_zero=use_zero)\n",
-    "        \n",
-    "#     for target in svmtargets:\n",
-    "#         MakeSimilarityHistogram(target, 'fcnn-svm/svm_better', use_zero=use_zero)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def VisualizeSimilarCpd(target, folder, use_zero=True):\n",
-    "    df_tlist = pd.read_csv('./Dataset/target_list.tsv', sep='\\t', index_col='chembl_tid') \n",
-    "    df_main = pd.read_csv('./Dataset/Data/%s.tsv'%target, sep='\\t', index_col=0)\n",
-    "    df_ecfp = pd.read_csv('./Dataset/ECFP/%s.tsv'%target, sep='\\t', index_col=0)\n",
-    "    log     = pd.read_csv('./Log_wodirection_trtssplit/SVM/%s_trial0.tsv'%target, sep='\\t', index_col=0)\n",
-    "\n",
-    "    len_c = FindBitLength(df_ecfp, ['core'])\n",
-    "    len_s = FindBitLength(df_ecfp, ['sub1', 'sub2', 'overlap'])\n",
-    "\n",
-    "    mms = df_ecfp.loc[df_main.drop_duplicates(['core_id']).index,:]\n",
-    "\n",
-    "    fpgen = Hash2Bits()\n",
-    "    fpc = GenerateFpsArray(mms['core'], nbits=len_c) \n",
-    "    fp = fpgen.GetMMPfingerprints_DF_unfold(df_ecfp, ['core', 'sub1', 'sub2', 'overlap'], nbits=[len_c, len_s], overlap='concat')\n",
-    "\n",
-    "    matc = funcTanimotoSklearn(fpc,fpc)\n",
-    "    simc = flattenTC(matc)\n",
-    "\n",
-    "    simfunc = partial(funcTanimotoKernel_MMPKernel, len_c=len_c)\n",
-    "    mat = simfunc(fp,fp)\n",
-    "    sim = flattenTC(mat)\n",
-    "\n",
-    "    tname = df_tlist.loc[target, 'primary_name']\n",
-    "    \n",
-    "    if use_zero:\n",
-    "        outdir = './Score_wodirection_trtssplit/similarity_hist/%s-with_zero' %(folder)\n",
-    "    else:\n",
-    "        outdir = './Score_wodirection_trtssplit/similarity_hist/%s-without_zero' %(folder)\n",
-    "        \n",
-    "    os.makedirs(outdir, exist_ok=True)\n",
-    "    \n",
-    "    makeHistogramOne(simc,\n",
-    "                     xlab_name     = 'core_wise_similarity',\n",
-    "                     y_title       = tname,\n",
-    "                     show_legend   = False,\n",
-    "                     save_fig_name = '%s/core_wise_%s.png'%(outdir, target),\n",
-    "                     include_zero  = use_zero,)\n",
-    "    \n",
-    "    makeHistogramOne(sim,\n",
-    "                     xlab_name     = 'mmp_wise_similarity',\n",
-    "                     y_title       = tname,\n",
-    "                     show_legend   = False,\n",
-    "                     save_fig_name = '%s/mmp_wise_%s.png'%(outdir, target),\n",
-    "                     include_zero  = use_zero,)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2265,7 +2101,7 @@
     "os.makedirs('./Score_axv/swarm_performance_%s/' %(type), exist_ok=True)\n",
     "\n",
     "for metric in ['matthews_coeff', 'auc_roc', 'recall', 'precision']:\n",
-    "    plots.MakeBoxPlotsSeaborn(table     = all_score,\n",
+    "    MakeBoxPlotsSeaborn(table     = all_score,\n",
     "                            xname     = 'model',\n",
     "                            yname     = metric,\n",
     "                            use_swarm = True,\n",
@@ -2341,7 +2177,7 @@
     "os.makedirs('./Score_axv/swarm_performance_%s/' %(type), exist_ok=True)\n",
     "\n",
     "for metric in ['matthews_coeff', 'auc_roc', 'recall', 'precision']:\n",
-    "    plots.MakeBoxPlotsSeaborn(table     = all_score,\n",
+    "    MakeBoxPlotsSeaborn(table     = all_score,\n",
     "                            xname     = 'model',\n",
     "                            yname     = metric,\n",
     "                            use_swarm = False,\n",
